--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "lint": "echo \"No linting configured\"",
+    "test": "jest"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/tests"
+    ]
   },
   "keywords": [],
   "author": {
@@ -35,7 +42,9 @@
     "style-loader": "^3.3.4"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "electron-squirrel-startup": "^1.0.1",
+    "jest": "^29.7.0",
     "sqlite3": "^5.1.7"
   }
 }
