--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "bcrypt": "^6.0.0",
     "electron-squirrel-startup": "^1.0.1",
     "jest": "^29.7.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "uuid": "^12.0.0"
   }
 }
