--- a/package.json
+++ b/package.json
@@ -42,9 +42,16 @@
     "style-loader": "^3.3.4"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.57.2",
     "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "electron-squirrel-startup": "^1.0.1",
+    "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "jest": "^29.7.0",
+    "morgan": "^1.10.1",
     "sqlite3": "^5.1.7",
     "uuid": "^12.0.0"
   }
