--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
     "bcrypt": "^6.0.0",
     "electron-squirrel-startup": "^1.0.1",
     "jest": "^29.7.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "yargs": "^17.7.2"
+  },
+  "bin": {
+    "vaultx": "src/cli/vaultx.js"
   }
 }
