--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "testEnvironment": "node",
     "roots": [
       "<rootDir>/tests"
+    ],
+    "transformIgnorePatterns": [
+      "/node_modules/(?!uuid)/"
     ]
   },
   "keywords": [],
@@ -52,10 +55,11 @@
     "helmet": "^8.1.0",
     "jest": "^29.7.0",
     "sqlite3": "^5.1.7",
+    "uuid": "^12.0.0",
     "yargs": "^17.7.2"
   },
   "bin": {
-    "vaultx": "src/cli/vaultx.js"
+    "vaultx": "src/cli/vaultx.js",
     "morgan": "^1.10.1",
     "sqlite3": "^5.1.7",
     "uuid": "^12.0.0"
