--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "style-loader": "^3.3.4"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "electron-squirrel-startup": "^1.0.1",
     "jest": "^29.7.0",
     "sqlite3": "^5.1.7"
